# NESpp

./: .gitignore  CMakeLists.txt
googletest/: CMakeLists.txt
res/nestest/: nestest.disasm
scripts/: disasm.py
src/: CMakeLists.txt
src/cpu/: cpu.cpp  cpu.h  machine.cpp  machine.h
src/cpu/handlers/: bitwise_opcodes_handler.cpp  bitwise_opcodes_handler.h  bitwise_opcodes_handlers.cpp  bitwise_opcodes_handlers.h  branch_opcodes_handlers.cpp  branch_opcodes_handlers.h  compare_opcodes_handlers.cpp  compare_opcodes_handlers.h  flag_opcodes_handlers.cpp  flag_opcodes_handlers.h  jump_opcodes_handlers.cpp  jump_opcodes_handlers.h  load_opcodes_handlers.cpp  load_opcodes_handlers.h  math_opcodes_handlers.cpp  math_opcodes_handlers.h  opcode_handlers.cpp  opcode_handlers.h  opcodes.h  stack_opcodes_handlers.cpp  stack_opcodes_handlers.h  store_opcodes_handlers.cpp  store_opcodes_handlers.h  system_opcode_handlers.cpp  system_opcode_handlers.h  transfer_opcodes_handlers.cpp  transfer_opcodes_handlers.h  unofficial_opcodes_handlers.cpp  unofficial_opcodes_handlers.h
src/cpu/memory/: memory.cpp  memory.h  stack.cpp  stack.h
src/cpu/register/: program_counter.cpp  program_counter.h  program_status.cpp  program_status.h  register.cpp  register.h  stack_pointer.cpp  stack_pointer.h
src/utils/: bits.h  debug.h  disassembler.h  hexdump.cpp  hexdump.h
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/googletest/googlemock/include/gmock/: gmock-matchers.h
tests/googletest/googlemock/scripts/: fuse_gmock_files.py
tests/googletest/googlemock/src/: gmock-spec-builders.cc
tests/googletest/googlemock/test/: gmock-function-mocker_nc_test.py  gmock_output_test.py  gmock_test_utils.py
tests/googletest/googletest/include/gtest/: gtest-matchers.h
tests/googletest/googletest/include/gtest/internal/: gtest-port.h
tests/googletest/googletest/src/: gtest.cc
tests/test_roms/: CMakeLists.txt
tests/test_roms/cpu/: main.cpp  nestest.h
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/cpu/handlers/: bitwise_opcodes_handler.cpp  bitwise_opcodes_handlers.cpp  branch_opcodes_handlers.cpp  compare_opcodes_handlers.cpp  flag_opcodes_handlers.cpp  jump_opcodes_handlers.cpp  load_opcodes_handlers.cpp  math_opcodes_handlers.cpp  stack_opcodes_handlers.cpp  store_opcodes_handlers.cpp  transfer_opcode_handlers.cpp  transfer_opcode_handlers_tests.cpp
